Simplify dotfiles tmux layout

--- a/dot_tmuxinator/dotfiles.yml.tmpl
+++ b/dot_tmuxinator/dotfiles.yml.tmpl
@@ -7,9 +7,4 @@ startup_pane: 1
 
 windows:
   - console: chezmoi status
-  - neovim:
-      root: {{ .chezmoi.sourceDir }}/dot_config/nvim
-      panes:
-        - nvim init.lua
-  - tmux: nvim {{ .chezmoi.sourceDir }}/dot_tmux.conf
-  - zsh: nvim {{ .chezmoi.sourceDir }}/dot_zshrc
+  - editor: nvim
