--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -39,4 +39,7 @@ export JAVA_HOME=$(/usr/libexec/java_home)
 # Google Cloud SDK
 source /opt/homebrew/share/google-cloud-sdk/path.zsh.inc
 source /opt/homebrew/share/google-cloud-sdk/completion.zsh.inc
+
+# Rancher Desktop
+export PATH="$HOME/.rd/bin:$PATH"
 {{- end }}
